sfdx-source/shared-services/sfdx-source/main/objects/IntegrationLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message if the integration failed</description>
    <inlineHelpText>Error message if the integration failed</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>