sfdx-source/shared-services/sfdx-source/main/objects/IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration transaction</description>
    <inlineHelpText>Status of the integration transaction</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>