sfdx-source/shared-services/sfdx-source/main/objects/IntegrationLog__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>The external system involved in the integration</description>
    <inlineHelpText>The external system involved in the integration</inlineHelpText>
    <label>System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Payment Processor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>